--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 <body>
    <h1>Home page</h1> 
    <button>Submit</button>
+   <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Unde voluptates illum totam id similique facere illo, et mollitia molestias ab excepturi accusantium incidunt officiis facilis debitis distinctio, expedita cum amet!</p>
 </body>
 </html>
