--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Splitmate</title>
 </head>
 <body>
-   <h1>Home page</h1> 
+   <h1>Home</h1> 
    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Unde voluptates illum totam id similique facere illo, et mollitia molestias ab excepturi accusantium incidunt officiis facilis debitis distinctio, expedita cum amet!</p>
 </body>
 </html>
