Search page changed

--- a/search.html
+++ b/search.html
@@ -8,6 +8,6 @@
 <body>
     <p>Pariatur adipisicing incididunt duis officia aliqua in est est anim incididunt ullamco.</p>
     <p>Reprehenderit ad sint aliquip elit labore ipsum. Duis dolore exercitation et ullamco adipisicing qui. Eu duis adipisicing exercitation voluptate. Aliqua incididunt dolore incididunt minim occaecat voluptate eu est. Consequat occaecat fugiat cupidatat do dolor voluptate tempor commodo. Laborum deserunt enim ex elit incididunt eu exercitation sunt culpa sit culpa. Consequat nostrud aliqua exercitation in sint velit excepteur id amet nisi sunt nulla id deserunt.</p>
-    <button>Search button</button>
+    <button>Search</button>
 </body>
 </html>
